# llama-sentiment-analysis

./: leap.yaml  leap_binder.py  leap_custom_test.py  pyproject.toml  requirements.txt
example/: simple_inference.py
llama_sentiment_analysis/: config.py  config.yaml  dataset.py  llama.py
llama_sentiment_analysis/data/: download_sst2.py
llama_sentiment_analysis/data/glue_sst_test/: cache-d9ccc25a13af40e5.arrow  data-00000-of-00001.arrow  state.json
llama_sentiment_analysis/data/glue_sst_train/: cache-47e8ac52b7105717.arrow  state.json
llama_sentiment_analysis/data/glue_sst_val/: cache-f47332feac137672.arrow  data-00000-of-00001.arrow  state.json
llama_sentiment_analysis/model/: download_model_from_s3.py
llama_sentiment_analysis/utils/: metrics.py  tokenizer_utils.py
tl/: metadata_helpers.py  metrics.py  tl_utils.py  visualizers.py
