[tool.poetry]
name = "llama-sentiment-analysis"
version = "0.1.0"
description = ""
authors = ["Idan <idan@idan.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
onnx2kerastl = "0.0.165"
transformers = "4.52.4"
matplotlib = "3.8.3"
code-loader = "^1.0.86"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
